try building now